<resources>
    <string name="app_name">AllMed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Настройки</string>
    <string name="consultation">Чат</string>
    <string name="my_track">Прием</string>
    <string name="doctor">К врачу</string>

    <!-- Day of Week -->
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>
    <string name="sunday">ВС</string>
    <string name="edit">Edit</string>
    <string name="time_table_drugs">Расписание\n лекарств</string>
    <string name="diagnostic">Обследования</string>
    <string name="select_symptoms">Выберите симптомы\nкоторые вас беспокоят</string>
    <string name="search_by_symptoms">Поиск по симптомам</string>
    <string name="key_symptoms">Ключевые симптомы</string>
    <string name="cough">Кашель</string>
    <string name="runny">Насморк</string>
    <string name="score_throat">Боль в горле</string>
    <string name="nausea">Тошнота</string>
    <string name="temperature">Температура</string>
    <string name="sik_head">Головная боль</string>
    <string name="photophobia">Светобоязнь</string>
    <string name="skip">Пропустить</string>
    <string name="chat">Чат</string>
    <string name="today">Сегодня</string>
    <string name="settings_label">Настройки</string>
    <string name="add_drug">Добавить лекарство</string>
    <string name="drug">Лекарство</string>
    <string name="add">Добавить</string>
    <string name="start">Начало</string>
    <string name="end">Окончание</string>
    <string name="start_date_title">Начало приема</string>
    <string name="end_date_title">Окончание приема</string>
    <string name="time_table_of_diagnostic">Расписание обследований</string>
    <string name="scheduled">Запланированные</string>
    <string name="completed">Завершенные</string>
    <string name="canceled">Отмененные</string>
    <string name="acceptance_road_map">График приема</string>
</resources>
