<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.diagnostic.DiagnosticFragment">

    <TextView
        android:id="@+id/tv_diagnostic_header"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:background="@drawable/bg_with_shadow"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/time_table_of_diagnostic"
        android:textColor="@color/general_text_color"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_diagnostic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:src="@drawable/ic_left"
        app:layout_constraintBottom_toBottomOf="@id/tv_diagnostic_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_diagnostic_time_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_diagnostic_header" />

    <com.github.kiolk.allmed.presentation.widget.VerticalTextView
        android:id="@+id/btn_diagnostic_scheduled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_right_side_button"
        android:elevation="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        android:text="@string/scheduled"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_diagnostic_header" />

    <com.github.kiolk.allmed.presentation.widget.VerticalTextView
        android:id="@+id/btn_diagnostic_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_right_side_button"
        android:elevation="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        android:text="@string/completed"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_diagnostic_scheduled" />

    <com.github.kiolk.allmed.presentation.widget.VerticalTextView
        android:id="@+id/btn_diagnostic_canceled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_right_side_button"
        android:elevation="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        android:text="@string/canceled"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_diagnostic_completed" />

</androidx.constraintlayout.widget.ConstraintLayout>