<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.tracker.adddrag.AddDragFragment">

    <TextView
        android:id="@+id/tv_add_drug_header"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:background="@drawable/bg_with_shadow"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/add_drug"
        android:textColor="@color/general_text_color"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_add_drug_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:src="@drawable/ic_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_add_drug_header"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vg_add_drag_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_white_rounded"
        android:elevation="3dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_drug_header">

        <ImageView
            android:id="@+id/iv_drug_search_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_add_drug_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/drug"
            android:maxLength="120"
            android:maxLines="1"
            android:textColor="@color/general_text_color"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_drug_search_icon"
            app:layout_constraintRight_toLeftOf="@+id/iv_drug_voice_search"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,TextFields"
            android:inputType="text" />

        <ImageView
            android:id="@+id/iv_drug_voice_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_mic_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/vg_start_drug_period"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_white_rounded"
        android:elevation="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vg_add_drag_name"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_start_drug_period"
            android:scaleType="centerInside"
            android:src="@drawable/ic_calender"
            android:layout_margin="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_cycle"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_start_drug_title"
            android:textSize="14sp"
            android:textColor="@color/light_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vg_end_drug_period"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_white_rounded"
        android:elevation="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vg_start_drug_period"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_end_drug_period"
            android:scaleType="centerInside"
            android:src="@drawable/ic_calender"
            android:layout_margin="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_cycle"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_end_drug_title"
            android:textSize="14sp"
            android:textColor="@color/light_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/end"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_drug_pattern"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_green_rounded"
        android:padding="15dp"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>