<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".presentation.screen.doctor.DoctorFragment">

    <TextView
        android:id="@+id/tv_select_symptoms_header"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:background="@drawable/bg_with_shadow"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/select_symptoms"
        android:textColor="@color/general_text_color"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vg_search_symptoms"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_white_rounded"
        android:elevation="3dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_symptoms_header">

        <ImageView
            android:id="@+id/iv_search_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/search_by_symptoms"
            android:maxLength="120"
            android:maxLines="1"
            android:textColor="@color/general_text_color"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_search_icon"
            app:layout_constraintRight_toLeftOf="@+id/iv_voice_search"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,TextFields"
            android:inputType="text" />

        <ImageView
            android:id="@+id/iv_voice_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_mic_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_key_symptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/key_symptoms"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vg_search_symptoms" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_symptoms"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_skip_symptom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_key_symptoms" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_skip_symptom"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_bordered"
        android:padding="15dp"
        android:text="@string/skip"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_next_symptom" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next_symptom"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_green_rounded"
        android:padding="15dp"
        android:text="@string/skip"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_skip_symptom"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>